RESOLVED FIXED60710
JavaScriptGlue should compile with -Wmissing-prototypes
https://bugs.webkit.org/show_bug.cgi?id=60710
Summary JavaScriptGlue should compile with -Wmissing-prototypes
David Kilzer (:ddkilzer)
Reported 2011-05-12 10:58:30 PDT
Created attachment 93305 [details] Patch Reviewed by NOBODY (OOPS!). Enabling -Wmissing-prototypes fixes an Xcode 4 project warning. This also fixes the following compiler warning: JavaScriptGlue/JSUtils.cpp:407:15: error: no previous prototype for function 'getThreadGlobalData' [-Werror,-Wmissing-prototypes,3] JSGlobalData* getThreadGlobalData() ^ * Configurations/Base.xcconfig: Set GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES. * JSUtils.cpp: (getThreadGlobalData): Made static. --- 3 files changed, 21 insertions(+), 2 deletions(-)
Attachments
Patch (2.27 KB, patch)
2011-05-12 10:58 PDT, David Kilzer (:ddkilzer)
ggaren: review+
WebKit Review Bot
Comment 1 2011-05-12 11:01:14 PDT
Attachment 93305 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptGlue/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptGlue/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 2 2011-05-12 11:21:30 PDT
Comment on attachment 93305 [details] Patch r=me
David Kilzer (:ddkilzer)
Comment 3 2011-05-12 12:05:59 PDT
*** Bug 60704 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 4 2011-05-12 12:06:02 PDT
*** Bug 60705 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 5 2011-05-12 12:06:06 PDT
*** Bug 60706 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 6 2011-05-12 16:36:47 PDT
Darin Adler
Comment 7 2014-04-24 16:45:22 PDT
Moving all JavaScriptGlue bugs to JavaScriptCore. The JavaScriptGlue framework itself is long gone. And most of the more recent bugs put in this component were put there by people who thought this was for some other aspect of “JavaScript glue” and have nothing to do with the actual original reason for the existence of this component, which was an OS-X-only framework named JavaScriptGlue.
Note You need to log in before you can comment on or make changes to this bug.