<http://webkit.org/b/60710> JavaScriptGlue should compile with -Wmissing-prototypes

Reviewed by Geoffrey Garen.

Enabling -Wmissing-prototypes fixes an Xcode 4 project warning.

This also fixes the following compiler warning:

    JavaScriptGlue/JSUtils.cpp:407:15: error: no previous prototype for function 'getThreadGlobalData' [-Werror,-Wmissing-prototypes,3]
     JSGlobalData* getThreadGlobalData()
                   ^

* Configurations/Base.xcconfig: Set
GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES.
* JSUtils.cpp:
(getThreadGlobalData): Made static.

Canonical link: https://commits.webkit.org/76052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86396 268f45cc-cd09-0410-ab3c-d52691b4dbfc